--- a/Energy.App.Standalone/Features/Analysis/ForecastCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/ForecastCard.razor
@@ -1,4 +1,7 @@
-﻿
+﻿@using Energy.App.Standalone.Features.Analysis.Services.Analysis;
+@inherits FluxorComponent
+@inject IDispatcher Dispatcher
+
 <MudCard Elevation="2">
     <MudCardContent>
         <MudPaper Class="d-flex flex-column flex-grow-1 m-1" Elevation="0">
@@ -44,42 +47,36 @@
     [Parameter, EditorRequired] public CalendarTerm Term { get; set; }
     [Parameter, EditorRequired] public ForecastAnalysis ForecastAnalysis { get; set; }
 
-    [Inject] AnalysisOptions AnalysisOptions { get; set; }
-
+    [Inject] IState<AnalysisOptionsState> AnalysisOptionsState { get; set; }
+    [Inject] AnalysisOptionsActionFactory AnalysisOptionsActionFactory { get; set; }
 
     string _consumptionIcon = Icons.Material.Filled.ElectricBolt;
     string _headerText;
 
+    bool _highlightToggled => AnalysisOptionsState.Value[MeterType].HighlightSet;
+
     protected override void OnParametersSet()
     {
+        base.OnParametersSet();
+
         _headerText = Term.AnalysisPeriodHeader(RelativePeriod.Next, ForecastAnalysis.Start);
 
         _consumptionIcon = MeterType == MeterType.Electricity ? Icons.Material.Filled.ElectricBolt : Icons.Material.Filled.LocalFireDepartment;
+    
     }
 
-
-    private bool _highlightToggled;
-
-
-    private async Task ToggleHighlight(bool toggled)
+    private void ToggleHighlight(bool toggled)
     {
         if (toggled)
         {
-            await AnalysisOptions[MeterType].SetHighlightRange(ForecastAnalysis.Start, ForecastAnalysis.End);
-            AnalysisOptions[MeterType].NotifySetHighlightRange += HighlightRangeChanged;
+            var setHighlightAction = AnalysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, ForecastAnalysis.Start, ForecastAnalysis.End);
+            Dispatcher.Dispatch(setHighlightAction);
         }
         else
         {
-            await AnalysisOptions[MeterType].RemoveHighlightRange();
-            AnalysisOptions[MeterType].NotifySetHighlightRange -= HighlightRangeChanged;
+            var clearHighlightAction = AnalysisOptionsActionFactory.Create(AnalysisAction.RemoveHighlightRange);
+            Dispatcher.Dispatch(clearHighlightAction);
         }
-        _highlightToggled = toggled;
-    }
 
-    private Task HighlightRangeChanged(DateTime startDate, DateTime endDate)
-    {
-        _highlightToggled = false;
-        StateHasChanged();
-        return Task.CompletedTask;
     }
 }
