--- a/Energy.App.Standalone/Features/Analysis/HistoricalAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/HistoricalAnalysisCard.razor
@@ -1,7 +1,7 @@
-﻿@    using Energy.App.Blazor.Client.Services.Analysis.Data
-@    using Energy.App.Blazor.Client.Services.Analysis
-@    using System.Runtime.InteropServices
-@implements IDisposable
+﻿@using Energy.App.Standalone.Features.Analysis.Services.Analysis;
+@inherits FluxorComponent
+@inject IDispatcher Dispatcher
+
 <MudCard Elevation="2">
         
     <MudCardContent>
@@ -58,13 +58,6 @@
     </MudCardContent>
 </MudCard>
 
-<div> Hi </div>
-<div> Hi </div>
-
-
-<div> Hi </div>
-<div> Hi </div>
-
 
 @code {
     [Parameter, EditorRequired] public bool PrimaryHeatSource { get; set; }
@@ -74,47 +67,37 @@
 
     [Parameter, EditorRequired] public HistoricalAnalysis DurationAnalysis { get; set; }
 
-    [Inject] AnalysisOptions AnalysisOptions { get; set; }
+    [Inject] IState<AnalysisOptionsState> AnalysisOptionsState { get; set; }
+    [Inject] AnalysisOptionsActionFactory AnalysisOptionsActionFactory { get; set; }
 
 
     string _consumptionIcon = Icons.Material.Filled.ElectricBolt;
     string _headerText;
-    private bool _highlightToggled;
+    bool _highlightToggled => AnalysisOptionsState.Value[MeterType].HighlightSet;
 
-
-    private Task HighlightRangeChanged(DateTime startDate, DateTime endDate)
-    {
-        _highlightToggled = false;
-        StateHasChanged();
-        return Task.CompletedTask;
-    }
 
     protected override void OnParametersSet()
     {
+        base.OnParametersSet();
+
         _headerText = Term.AnalysisPeriodHeader(Period, DurationAnalysis.Start);
         _consumptionIcon = MeterType == MeterType.Electricity ? Icons.Material.Filled.ElectricBolt : Icons.Material.Filled.LocalFireDepartment;
     }
 
-    private async Task ToggleHighlight(bool toggled)
+    private void ToggleHighlight(bool toggled)
     {
         if (toggled)
         {
-            await AnalysisOptions[MeterType].SetHighlightRange(DurationAnalysis.Start, DurationAnalysis.End);
-            AnalysisOptions[MeterType].NotifySetHighlightRange += HighlightRangeChanged;
+            var setHighlightAction = AnalysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, DurationAnalysis.Start, DurationAnalysis.End);
+            Dispatcher.Dispatch(setHighlightAction);
         }
         else
         {
-            await AnalysisOptions[MeterType].RemoveHighlightRange();
-            AnalysisOptions[MeterType].NotifySetHighlightRange -= HighlightRangeChanged;
+            var clearHighlightAction = AnalysisOptionsActionFactory.Create(AnalysisAction.RemoveHighlightRange);
+            Dispatcher.Dispatch(clearHighlightAction);
         }
-        _highlightToggled = toggled;
 
     }
 
-
-    public void Dispose()
-    {
-        AnalysisOptions[MeterType].NotifySetHighlightRange -= HighlightRangeChanged;
-    }
 
 }
