--- a/Energy.App.Standalone/Features/Weather/Pages/FetchData.razor
+++ b/Energy.App.Standalone/Features/Weather/Pages/FetchData.razor
@@ -45,7 +45,7 @@ else
             @foreach (var weatherReading in WeatherState.Value.WeatherReadings)
             {
                 <tr>
-                    <td>@weatherReading.ReadDate.ToShortDateString()</td>
+                    <td>@weatherReading.UtcReadDate.ToShortDateString()</td>
                     <td>@weatherReading.TemperatureAverage</td>
                     <td>@weatherReading.TemperatureMin</td>
                     <td>@weatherReading.TemperatureMax</td>
