--- a/Energy.App.Standalone/Features/Setup/Pages/MeterTariffsTable.razor
+++ b/Energy.App.Standalone/Features/Setup/Pages/MeterTariffsTable.razor
@@ -148,10 +148,10 @@
     {
         public DateTime? DateAppliesFrom { get; set; }
 
-        public double PencePerKWh { get; set; }
+        public decimal PencePerKWh { get; set; }
         public bool IsHourOfDayFixed { get; set; }
 
-        public double DailyStandingChargePence { get; set; }
+        public decimal DailyStandingChargePence { get; set; }
 
         public List<HourOfDayPrice> HourOfDayPrices { get; set; }
         public bool ShowHourOfDayRows { get; set; }
