--- a/Energy.App.Standalone/Features/Weather/Pages/FetchData.razor
+++ b/Energy.App.Standalone/Features/Weather/Pages/FetchData.razor
@@ -49,7 +49,7 @@ else
                     <td>@weatherReading.TemperatureAverage</td>
                     <td>@weatherReading.TemperatureMin</td>
                     <td>@weatherReading.TemperatureMax</td>
-                    <td>@((weatherReading.TemperatureMin + weatherReading.TemperatureMax)/2d)</td>
+                    <td>@((weatherReading.TemperatureMin + weatherReading.TemperatureMax)/2m)</td>
 
                     <td>@weatherReading.IsHistorical</td>
                     <td>@weatherReading.IsRecentForecast</td>
