--- a/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
@@ -1,4 +1,7 @@
-﻿
+﻿@using Energy.App.Standalone.Features.Analysis.Services.Analysis;
+@inherits FluxorComponent
+@inject IDispatcher Dispatcher
+
 <MudCard Elevation="2">
     <MudCardContent>
         <MudPaper Class="d-flex flex-column flex-grow-1 m-1" Elevation="0">
@@ -51,7 +54,8 @@
     [Parameter, EditorRequired] public HistoricalAnalysis TotalsSoFar { get; set; }
     [Parameter, EditorRequired] public ForecastAnalysis TotalsForecast { get; set; }
 
-    [Inject] AnalysisOptions AnalysisOptions { get; set; }
+    [Inject] IState<AnalysisOptionsState> AnalysisOptionsState { get; set; }
+    AnalysisOptionsActionFactory _analysisOptionsActionFactory;
 
     string _consumptionIcon = Icons.Material.Filled.ElectricBolt;
     string _headerText;
@@ -60,29 +64,32 @@
 
     protected override void OnParametersSet()
     {
+        base.OnParametersSet();
+
+        _analysisOptionsActionFactory= new AnalysisOptionsActionFactory(MeterType);
         _headerText = Term.AnalysisPeriodHeader(RelativePeriod.Current, TotalsSoFar.Start);
         _consumptionIcon = MeterType == MeterType.Electricity ? Icons.Material.Filled.ElectricBolt : Icons.Material.Filled.LocalFireDepartment;
+
+        _highlightToggled = AnalysisOptionsState.Value[MeterType].ToggleSource == ToggleSource.Current;
+
     }
 
     private async Task ToggleHighlight(bool toggled)
     {
+
         if (toggled)
         {
-            await AnalysisOptions[MeterType].SetHighlightRange(TotalsSoFar.Start, TotalsForecast.End);
-            AnalysisOptions[MeterType].NotifySetHighlightRange += HighlightRangeChanged;
+            var setHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, ToggleSource.Current, TotalsSoFar.Start, TotalsForecast.End);
+            Dispatcher.Dispatch(setHighlightAction);
         }
         else
         {
-            await AnalysisOptions[MeterType].RemoveHighlightRange();
-            AnalysisOptions[MeterType].NotifySetHighlightRange -= HighlightRangeChanged;
+            var clearHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.RemoveHighlightRange);
+            Dispatcher.Dispatch(clearHighlightAction);
         }
+
         _highlightToggled = toggled;
+
     }
 
-    private Task HighlightRangeChanged(DateTime startDate, DateTime endDate)
-    {
-        _highlightToggled = false;
-        StateHasChanged();
-        return Task.CompletedTask;
-    }
 }
