--- a/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
@@ -1,4 +1,4 @@
-﻿@inherits FluxorComponent
+﻿@*@inherits FluxorComponent
 @implements IAsyncDisposable
 @inject IState<MeterSetupState> MeterSetupState
 @inject IDispatcher Dispatcher
@@ -113,4 +113,4 @@
         await JsRuntime.InvokeVoidAsync("ChartFunctions.toggleCostSeries", $"profile-chart-meter-{MeterGlobalId}", showCost);
     }
 
-}
+}*@
