--- a/Energy.App.Standalone/Features/Analysis/PrimaryHeatSourceSummary.razor
+++ b/Energy.App.Standalone/Features/Analysis/PrimaryHeatSourceSummary.razor
@@ -1,5 +1,4 @@
-﻿@using Energy.App.Blazor.Client.StateContainers;
-@using Energy.App.Standalone.Features.Analysis.Services.Analysis.Interfaces;
+﻿@using Energy.App.Standalone.Features.Analysis.Services.Analysis.Interfaces;
 @using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Interfaces;
 @using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Models;
 @using Energy.App.Standalone.Features.EnergyReadings.Store;
