--- a/Energy.App.Standalone/Features/Analysis/ForecastCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/ForecastCard.razor
@@ -11,7 +11,7 @@
 
         <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
 
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound" >@ForecastAnalysis.ForecastCostPence</MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound" >@ForecastAnalysis.ForecastCostPounds</MudChip>
             <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon" >@ForecastAnalysis.ForecastConsumption kWh</MudChip>
             <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica" >@ForecastAnalysis.ForecastCo2 kgCO<sub>2</sub></MudChip>
 
