--- a/Energy.App.Standalone/Shared/MainLayout.razor
+++ b/Energy.App.Standalone/Shared/MainLayout.razor
@@ -3,6 +3,7 @@
 @using Fluxor.Blazor.Web.Components;
 @using Fluxor.Persist.Middleware;
 @using System.Collections.Immutable;
+@using static Energy.App.Standalone.Features.EnergyReadings.Store.GasReadingsReducers;
 @inherits FluxorLayout
 @inject IDispatcher Dispatcher
 
@@ -22,21 +23,19 @@
     </MudDrawer>
     <MudMainContent>
         <MudContainer>
-            @if (!Ready)
+            @Body
+
+            @if (Ready)
             {
                 <MudGrid Justify="Justify.Center">
                     <MudItem xs="12">
-                        <MudPaper Elevation="2">
-                            <MudText Typo="Typo.h5">Loading...</MudText>
+                        <MudPaper Elevation="2" Class="m-3 mx-auto">
+                            <MudText Typo="Typo.h5">@_status</MudText>
                             <MudProgressCircular StrokeWidth="8" Size="@Size.Large" Value="_progress" Color="Color.Primary">
                             </MudProgressCircular>
                         </MudPaper>
                     </MudItem>
                 </MudGrid>
-            }
-            else
-            {
-                @Body
             }
         </MudContainer>
     </MudMainContent>
@@ -45,9 +44,7 @@
 
 @code {
 
-    [Inject] IAppInitialization AppInitialization { get; set; }
-    [Inject]
-    public IStateSelection<WeatherState, ImmutableList<DailyWeatherReading>> WeatherStateSelection { get; set; }
+    [Inject] public IAppInitialization AppInitialization { get; set; }
 
     [Inject]
     public IState<AppInitializationState> AppInitializationState { get; set; }
@@ -57,26 +54,88 @@
                             && !AppInitializationState.Value.WaitingForElectricityReadingsData
                             && !AppInitializationState.Value.WaitingForGasReadingsData
                             && !AppInitializationState.Value.WaitingForLinearCoefficients);
+
     double _progress = 10;
+    string _status = "App initializing";
 
     protected override void OnInitialized()
     {
-        _progress += 20;
+
+        
+
         this.SubscribeToAction<InitializePersistMiddlewareResultSuccessAction>(result =>
         {
 
-            Console.WriteLine($"**** State rehydrated**");
+            Console.WriteLine($"**** State rehydrated ****");
             _progress += 20;
 
-
-            AppInitialization.Initialize();
 
             this.StateHasChanged();// we now have state, we can re-render to reflect binding changes
 
-            _progress += 20;
 
         });
 
+    }
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        base.OnAfterRender(firstRender);
+
+        if (!firstRender)
+        {
+            return;
+        }
+
+        
+
+
+        SubscribeToAction<InitializeAppAction>(result =>
+        {
+            Console.WriteLine($"**** Initializing App ****");
+
+            _status = "App initializing";
+
+            AppInitialization.Initialize();
+            _progress += 10;
+
+        });
+
+        SubscribeToAction<NotifyWeatherReadingsLoadedAction>(result =>
+        {
+            Console.WriteLine("NotifyWeatherReadingsLoadedAction");
+
+            _status = "Weather data loaded";
+            _progress += 10;
+
+        });
+
+        SubscribeToAction<NotifyElectricityCostsCalculationCompletedAction>(result =>
+        {
+            Console.WriteLine("NotifyElectricityCostsCalculationCompletedAction");
+
+            _status = "Electricity data loaded" + (result.Failed ? "" : " with costs");
+            _progress += 10;
+
+        });
+
+        SubscribeToAction<NotifyGasCostsCalculationCompletedAction>(result =>
+        {
+            Console.WriteLine("NotifyGasCostsCalculationCompletedAction");
+
+            _status = "Gas data loaded" + (result.CalculationError ? "" : " with costs");
+            _progress += 10;
+
+        });
+
+        SubscribeToAction<NotifyLinearCoeffiecientsReadyAction>(result =>
+        {
+            Console.WriteLine("NotifyLinearCoeffiecientsReadyAction");
+            _status = "Initial forecast analysis completed";
+            _progress += 10;
+
+        });
+
+        Dispatcher.Dispatch(new InitializeAppAction());
     }
 
 
